--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -12,11 +12,11 @@ jobs:
     strategy:
       matrix:
         build_env:
-          - tag: "22.03.4"
-            pkgarch: mips_24kc
-            target: ath79
-            subtarget: nand
-            vermagic: "5c9be91b90bda5403fe3a7c4e8ddb26f"
+          - tag: "24.10.1"
+            pkgarch: x86_64
+            target: x86
+            subtarget: 64
+            vermagic: "af351158cfb5febf5155a3aa53785982-r1"
           - tag: "23.05.0"
             pkgarch: mipsel_24kc
             target: ramips
